# freertos_experiment_framework

./: .gitignore  CMakeLists.txt  README.md
cmake/earendil/compat/: Earendil_ArduinoCompat.cmake
cmake/earendil/core/: Earendil_Mutexes.cmake  Earendil_SharedData.cmake  Earendil_TaskHandles.cmake
cmake/earendil/experimental/: Earendil_Experimental.cmake
cmake/earendil/libraries/: Earendil_AccelGyro.cmake  Earendil_Altimeter.cmake  Earendil_Magnetometer.cmake
config/: FreeRTOSConfig.h
src/compat/Earendil_ArduinoCompat/: Earendil_ArduinoCompat.cpp  Earendil_ArduinoCompat.h
src/core/Earendil_Mutexes/: Earendil_Mutexes.h
src/core/Earendil_SharedData/: Earendil_SharedData.h
src/core/Earendil_TaskHandles/: Earendil_TaskHandles.h
src/experimental/Earendil_Experimental/: Earendil_Experimental.h  Earendil_Experimental_Tasks.cpp  Earendil_Experimental_Utils.cpp
src/experimental/Earendil_Experimental/Earendil_Experimental_SharedData/: Earendil_Experimental_SharedData.h
src/experimental/Earendil_Experimental/Earendil_Experimental_TaskHandles/: Earendil_Experimental_TaskHandles.h
src/libraries/Earendil_AccelGyro/: Earendil_AccelGyro.h  Earendil_AccelGyro_Tasks.cpp  Earendil_AccelGyro_Utils.cpp
src/libraries/Earendil_AccelGyro/Earendil_AccelGyro_SharedData/: Earendil_AccelGyro_SharedData.h
src/libraries/Earendil_AccelGyro/Earendil_AccelGyro_TaskHandles/: Earendil_AccelGyro_TaskHandles.h
src/libraries/Earendil_Altimeter/: Earendil_Altimeter.h  Earendil_Altimeter_Tasks.cpp  Earendil_Altimeter_Utils.cpp
src/libraries/Earendil_Altimeter/Earendil_Altimeter_SharedData/: Earendil_Altimeter_SharedData.h
src/libraries/Earendil_Altimeter/Earendil_Altimeter_TaskHandles/: Earendil_Altimeter_TaskHandles.h
src/libraries/Earendil_Magnetometer/: Earendil_Magnetometer.h  Earendil_Magnetometer_Tasks.cpp  Earendil_Magnetometer_Utils.cpp
src/libraries/Earendil_Magnetometer/Earendil_Magnetometer_SharedData/: Earendil_Magnetometer_SharedData.h
src/libraries/Earendil_Magnetometer/Earendil_Magnetometer_TaskHandles/: Earendil_Magnetometer_TaskHandles.h
src/main/: Experiment.cpp  Experiment.h
